// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea[Base] should render correctly  1`] = `
<div
  class="c8uxpn5 soui-textarea-wrapper cpkw85j soui-textarea-wrapper-focus"
  data-soui-input-border="true"
>
  <textarea
    class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about autosize 1`] = `
<div
  class="c8uxpn5 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
    style="overflow: auto; max-height: 150px; height: 0px;"
  />
  <textarea
    class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea cl5h78i soui-textarea-shadow"
    placeholder="Please enter content, the height can be automatically adjusted"
    rows="2"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about footer 1`] = `
<div
  class="c8uxpn5 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
    placeholder="input something"
    rows="3"
  />
  <div
    class="ca3p7fv soui-textarea-wrapper-padding-box cf3zxp9 soui-textarea-footer"
  >
    <div
      style="text-align: right;"
    >
      <span>
        0
      </span>
       / 20
    </div>
  </div>
</div>
`;

exports[`Textarea[Base] should render correctly about info 1`] = `
<div
  class="c8uxpn5 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about info by function 1`] = `
<div
  class="c8uxpn5 soui-textarea-wrapper"
  data-soui-input-border="true"
>
  <textarea
    class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
    placeholder="input something"
    rows="4"
  />
</div>
`;

exports[`Textarea[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c8uxpn5 soui-textarea-wrapper cps086u soui-textarea-wrapper-small"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
      placeholder="small size"
      rows="3"
    />
  </div>
  <div
    class="c8uxpn5 soui-textarea-wrapper"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
      placeholder="default size"
      rows="3"
    />
  </div>
  <div
    class="c8uxpn5 soui-textarea-wrapper cpnycoa soui-textarea-wrapper-large"
    data-soui-input-border="true"
    style="width: 120px; margin-inline-end: 24px;"
  >
    <textarea
      class="ca3p7fv soui-textarea-wrapper-padding-box cw0pjfi soui-textarea-wrapper-inner-title-bottom c8az4vw soui-textarea-textarea"
      placeholder="large size"
      rows="3"
    />
  </div>
</div>
`;
